name:                warp-bug
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Moritz Kiefer
maintainer:          moritz.kiefer@purelyfunctional.org
build-type:          Simple
cabal-version:       >=1.10

executable warp-bug
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10
                     , warp==3.2.11
                     , wai
                     , http-types
  ghc-options:         -Wall -threaded
  default-language:    Haskell2010
